mik-sql-macros/tests/ui/sql/empty_filter.stderr
error: Empty filter block
 --> tests/ui/sql/empty_filter.rs:7:18
  |
7 |         filter: {},
  |                  ^
